--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,10 @@
     }
   ],
   "require": {
-    "php": ">=7.0",
+    "php": ">=7.1.3",
     "guzzlehttp/guzzle": "^6.3",
-    "illuminate/support": "~5.7.0"
+    "illuminate/support": "~5.7.0",
+    "laravel/framework": ">=5.7"
   },
   "require-dev": {
     "orchestra/testbench": "~3.7.0",
