--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
     }
   ],
   "require": {
-    "php": ">=7.1.3",
+    "php": ">=7.0",
     "guzzlehttp/guzzle": "^6.3",
-    "illuminate/support": "~5.7.0",
-    "laravel/framework": ">=5.7"
+    "illuminate/support": "~5.5",
+    "laravel/framework": ">=5.5"
   },
   "require-dev": {
-    "orchestra/testbench": "~3.7.0",
-    "phpunit/phpunit": "^7.0"
+    "orchestra/testbench": "~3.5",
+    "phpunit/phpunit": ">=6.0"
   },
   "autoload": {
     "psr-4": {
