--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,35 @@ php:
   - 7.2
   - 7.3
 
+env:
+  - LARAVEL_VERSION=5.4.*
+  - LARAVEL_VERSION=5.5.*
+  - LARAVEL_VERSION=5.6.*
+  - LARAVEL_VERSION=5.7.*
+
+matrix:
+  fast_finish: true
+  exclude:
+    - php: 5.6.4
+      env: LARAVEL_VERSION=5.5.*
+    - php: 5.6.4
+      env: LARAVEL_VERSION=5.6.*
+    - php: 5.6.4
+      env: LARAVEL_VERSION=5.7.*
+    - php: 7.0
+      env: LARAVEL_VERSION=5.6.*
+    - php: 7.0
+      env: LARAVEL_VERSION=5.7.*
+
 before_install:
   - travis_retry composer self-update --stable -n
   - composer validate --no-check-all --strict
+  - if [ "$LARAVEL_VERSION" != "" ]; then composer require --dev "laravel/laravel:${LARAVEL_VERSION}" --no-update; fi;
 
 install:
   - travis_retry composer install --no-suggest --prefer-dist -n -o
   - travis_retry composer require --dev satooshi/php-coveralls
+  - composer update
 
 script:
   - composer run phpunit -- --coverage-clover ./tests/logs/clover.xml
