--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,10 @@ matrix:
       env: LARAVEL_VERSION=5.6.*
     - php: 7.0
       env: LARAVEL_VERSION=5.7.*
+    - php: 7.2
+      env: LARAVEL_VERSION=5.4.*
+    - php: 7.3
+      env: LARAVEL_VERSION=5.4.*
 
 before_install:
   - travis_retry composer self-update --stable -n
